# Team-8-AERO62520-Robotic-Systems-Design-Project

./: README.md
src/mycobot_interfaces/: package.xml
src/mycobot_moveit_config/: package.xml
src/mycobot_moveit_config/config/mycobot_280/: leorover_controllers.yaml  leorover_joint_limits.yaml  leorover_mycobot.srdf
src/mycobot_moveit_config/config/mycobot_280_real_3dof/: README.md  kinematics.yaml  leorover_mycobot_3dof.srdf
src/mycobot_moveit_config/launch/: leorover_demo.launch.py  leorover_moveit.launch.py  move_group.launch.py
src/mycobot_mtc_pick_place_demo/: CMakeLists.txt  package.xml
src/mycobot_mtc_pick_place_demo/launch/: mtc_grasp_leorover.launch.py
src/mycobot_mtc_pick_place_demo/rviz/: mtc_demos.rviz
src/mycobot_mtc_pick_place_demo/scripts/: send_object_pose.py
src/mycobot_mtc_pick_place_demo/src/: get_planning_scene_server.cpp  mtc_grasp_pose_node.cpp
src/team8_navigation/: CMakeLists.txt  package.xml
src/team8_navigation/config/: cartographer.lua  ekf.yaml  gz_bridge.yaml  mycobot_controllers.yaml  navigation.yaml  slam_toolbox_mapping.yaml
src/team8_navigation/launch/: navigation.launch.py  navigation_with_slam.launch.py  spawn_robot.launch.py  world.launch.py  yolo_sim.launch.py
src/team8_navigation/maps/: exploration_map.pgm  exploration_map.yaml  exploration_map_tasks.json
src/team8_navigation/models/: D435.stl
src/team8_navigation/rviz/: navigation.rviz
src/team8_navigation/scripts/: explore_and_patrol.py  patrol_node.py  send_grasp_target.py
src/team8_navigation/urdf/: leo_sim.urdf.xacro  macros.xacro
src/team8_navigation/urdf/mycobot/: adaptive_gripper.urdf.xacro  mycobot_280_arm.urdf.xacro
src/team8_navigation/worlds/: my_custom_world.sdf  simplytest.sdf
src/team8_trajectory_server/: package.xml  setup.py
src/team8_trajectory_server/team8_trajectory_server/: trajectory.py
src/team8_yolov8/: package.xml  setup.py
src/team8_yolov8/team8_yolov8/: yolo_to_grasp_node.py  yolov8_node.py
