<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>team8_navigation</name>
  <version>1.0.0</version>
  <description>Course submission package for simulated mobile robot navigation, SLAM bringup, map-based patrol scaffolding, and integrated launch support.</description>
  <maintainer email="david.dudas@outlook.com">David Dudas</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>tf2_ros</depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
